--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "live-server",
-    "serve-json": "json-server --watch ./db.json"
+    "json:server": "node configs/server.js"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "live-server": "^1.2.2"
-  },
   "devDependencies": {
-    "json-server": "^0.17.4"
+    "json-server": "^0.17.4",
+    "live-server": "^1.2.2"
   }
 }
