--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "json-server": "^0.17.4",
     "live-server": "^1.2.2"
+  },
+  "dependencies": {
+    "typescript": "^5.2.2"
   }
 }
