--- a/package.json
+++ b/package.json
@@ -4,16 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "live-server src",
-    "json:server": "node configs/server.js"
+    "json:server": "node configs/server.js",
+    "serve": "webpack serve --env mode=development",
+    "build:dev": "webpack --env mode=development",
+    "build:prod": "webpack --env mode=production",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/webpack-dev-server": "^4.7.2",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.54.0",
+    "html-webpack-plugin": "^5.5.3",
     "json-server": "^0.17.4",
-    "live-server": "^1.2.2"
-  },
-  "dependencies": {
-    "typescript": "^5.2.2"
+    "live-server": "^1.2.2",
+    "mini-css-extract-plugin": "^2.7.6",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.1",
+    "typescript": "5.2",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
